--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsdom": "^22.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "multer": "^2.0.1",
     "nodemon": "^2.0.19"
   }
 }
