--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cron": "^3.5.0",
     "dompurify": "^3.2.6",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
