--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "jsdom": "^22.1.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "mongoose": "^6.5.4",
     "multer": "^2.0.1",
     "nodemon": "^2.0.19"
